Add booking API and controller
